Se realizan ajustes al arcivo Deily.html y se cambia la imagen

--- a/Deily.html
+++ b/Deily.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quiz 1 Programacion Web</title>
+    <title>Quiz 1 Programacion Web Deily</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="background-color:aquamarine;">
-    <h1>Page1</h1>
-    <h1><a href="index2.html">NextPage</a></h1>
+  <body style="background-color:magenta;">
+    <center><h1>¡Hi everyone!</h1></center>
+    <a class="btn btn-primary" href="Jorge.html" role="button">Haz clic aquí</a>
+    <button class="btn btn-primary" type="submit">Button</button>
+    <!--<h1><a href="Jorge.html">Haz clic aquí, por</a></h1>-->
     <br>
-    <img src="img/dog1.jpg">
-
+    <img src="img/dog1.jpg" align="center">
+    <strong><center><p>¡Amo los huskiessss!</p></center></strong>
 	<script src="index.js"></script>
   </body>
 </html>
