--- a/Deily.html
+++ b/Deily.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+      .centrar-imagen {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh; /* Esto centra la imagen verticalmente en la pantalla */
+      }
+
+      .boton {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            text-align: center;
+            text-decoration: none;
+            background-color: #4CAF50;
+            color: white;
+            border: 1px solid #4CAF50;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .boton:hover {
+            background-color: #45a049;
+        }
+    </style>
     <title>Quiz 1 Programacion Web Deily</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:magenta;">
     <center><h1>¡Hi everyone!</h1></center>
-    <a class="btn btn-primary" href="Jorge.html" role="button">Haz clic aquí</a>
-    <button class="btn btn-primary" type="submit">Button</button>
+    <a href="Jorge.html" class="boton">Haz clic aquí, please</a>
     <!--<h1><a href="Jorge.html">Haz clic aquí, por</a></h1>-->
     <br>
-    <img src="img/dog1.jpg" align="center">
+    <div class="centrar-imagen">
+    <img src="img/dog1.jpg" alt="Perro">
+    </div>
     <strong><center><p>¡Amo los huskiessss!</p></center></strong>
 	<script src="index.js"></script>
   </body>
