Se cambia el color del fondo

--- a/Deily.html
+++ b/Deily.html
@@ -12,11 +12,6 @@
           height: 100vh; /* Esto centra la imagen verticalmente en la pantalla */
       }
 
-      .imagen-pequena {
-            max-width: 100%; /* Ajusta el tamaño máximo de la imagen al ancho del contenedor */
-            max-height: 100%; /* Ajusta el tamaño máximo de la imagen al alto del contenedor */
-      }
-
       .boton {
             display: inline-block;
             padding: 10px 20px;
@@ -28,6 +23,7 @@
             border: 1px solid #4CAF50;
             border-radius: 5px;
             cursor: pointer;
+            margin-right: 10px; /* Agregado para separar del margen derecho */
         }
 
         .boton:hover {
@@ -37,7 +33,7 @@
     <title>Quiz 1 Programacion Web Deily</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="background-color: ;">
+  <body style="background-color: pink;">
     <center><h1>¡Hi everyone!</h1></center>
     <br>
     <!--Agrega el botón para continuar a la siguiente página-->
@@ -45,7 +41,7 @@
     <br>
     <!--Llama la clase mencionada en los estilos y se agrega la imagen-->
     <div class="centrar-imagen">
-    <img src="img/dog1.jpg" alt="Perro" class="imagen-pequena">
+    <img src="img/dog1.jpg" alt="Perro">
     </div>
     <!--Inserta texto descriptivo de la imágen-->
     <strong><center><p>¡Amo los huskiessss!</p></center></strong>
