se corrige el espacio y orientación del botón

--- a/Deily.html
+++ b/Deily.html
@@ -12,6 +12,10 @@
           height: 100vh; /* Esto centra la imagen verticalmente en la pantalla */
       }
 
+      .contenedor-boton {
+            text-align: left; 
+      }
+
       .boton {
             display: inline-block;
             padding: 10px 20px;
@@ -36,13 +40,16 @@
   <body style="background-color: pink;">
     <center><h1>¡Hi everyone!</h1></center>
     <br>
-    <!--Agrega el botón para continuar a la siguiente página-->
+    <!--Llama la clase y agrega el botón para continuar a la siguiente página-->
+    <div class="contenedor-boton">
     <a href="Jorge.html" class="boton">Haz clic aquí, please</a>
+    </div>
     <br>
     <!--Llama la clase mencionada en los estilos y se agrega la imagen-->
     <div class="centrar-imagen">
     <img src="img/dog1.jpg" alt="Perro">
     </div>
+    <br>
     <!--Inserta texto descriptivo de la imágen-->
     <strong><center><p>¡Amo los huskiessss!</p></center></strong>
 	<script src="index.js"></script>
