Se agregan los estilos para alinear correctamente la imagen y se cambian los colores al botón para que combine con los colores centrales

--- a/Deily.html
+++ b/Deily.html
@@ -18,33 +18,32 @@
             font-size: 16px;
             text-align: center;
             text-decoration: none;
-            background-color: #4CAF50;
+            background-color: lightskyblue;
             color: white;
-            border: 1px solid #4CAF50;
+            border: 2.5px solid blue;
             border-radius: 5px;
             cursor: pointer;
         }
 
         .boton:hover {
-            background-color: #45a049;
+            background-color: blue;
         }
     </style>
     <title>Quiz 1 Programacion Web Deily</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="background-color: pink;">
+  <body style="background-color: lightpink">
     <center><h1>¡Hi everyone!</h1></center>
-    <br>
     <!--Inserta texto descriptivo de la imágen-->
-    <strong><center><p>¡Amo los huskiessss!</p></center></strong>
+    <center><p>¡Amo los huskiessss!</p></center>
     <br>
     <!--Llama la clase y agrega el botón para continuar a la siguiente página-->
+    <center class="d-flex justify-content-end">
     <a href="Jorge.html" align="center" class="boton">Haz clic aquí, please</a>
-    <br>
+    </center>
     <!--Llama la clase mencionada en los estilos y se agrega la imagen-->
     <div class="centrar-imagen">
-    <img src="img/dog1.jpg" alt="Perro">
+    <img src="img/dog1.jpg" alt="Perro" style="height: 100%; width: 50%; object-fit: cover; margin-top: 50px;">
     </div>
-	<script src="index.js"></script>
   </body>
 </html>
