Cambio de color fondo amarillo

--- a/Jorge.html
+++ b/Jorge.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style>
-      .centrar-imagen {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh; /* Esto centra la imagen verticalmente en la pantalla */
-      }
 
-      .boton {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            text-align: center;
-            text-decoration: none;
-            background-color: orange;
-            color: white;
-            border: 2.5px solid orangered;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <style>
+    .centrar-imagen {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      /* Esto centra la imagen verticalmente en la pantalla */
+    }
 
-        .boton:hover {
-            background-color: orangered;
-        }
-    </style>
-    <title>Quiz 1 Programacion Web Jorge</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body style="background-color: greenyellow">
-    <center><h1>Hola xdxd</h1></center>
-    <!--Agrega el botón para continuar a la siguiente página-->
-    <a href="Deily.html" align="center" class="boton">Haz clic aquí y regresa atrás</a>
-    <!--Llama la clase mencionada en los estilos y se agrega la imagen-->
-    <div class="centrar-imagen">
-    <img src="img/students.jpg" alt="Estudiando" style="height: 70%; width: 50%; object-fit: cover; margin-top: -150px;">
-    </div>
-  </body>
+    .boton {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 16px;
+      text-align: center;
+      text-decoration: none;
+      background-color: orange;
+      color: white;
+      border: 2.5px solid orangered;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .boton:hover {
+      background-color: orangered;
+    }
+  </style>
+  <title>Quiz 1 Programacion Web Jorge</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body style="background-color: yellow">
+  <center>
+    <h1>Hola xdxd</h1>
+  </center>
+  <!--Agrega el botón para continuar a la siguiente página-->
+  <a href="Deily.html" align="center" class="boton">Haz clic aquí y regresa atrás</a>
+  <!--Llama la clase mencionada en los estilos y se agrega la imagen-->
+  <div class="centrar-imagen">
+    <img src="img/students.jpg" alt="Estudiando"
+      style="height: 70%; width: 50%; object-fit: cover; margin-top: -150px;">
+  </div>
+</body>
+
 </html>
